# pycose

./: .coveragerc  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  attribute.py  cosemessage.py  crypto.py  dev-requirements.txt  mac0message.py  maccommon.py  macmessage.py  pytest.ini  requirements.txt  setup.cfg  setup.py  sign1message.py  signcommon.py  signmessage.py  tox.ini
.github/workflows/: python-package.yml
cose/: __init__.py  algorithms.py  cosebase.py  curves.py  exceptions.py  headers.py  utils.py
docs/: CONTRIBUTING.rst  algorithms.rst  conf.py  examples.rst  glossary.rst  index.rst  installation.rst
pycose/: __init__.py  algorithms.py  attribute.py  attributes.py  basicstructure.py  context.py  coseattrs.py  cosebase.py  cosekey.py  cosemessage.py  coseparams.py  cosesignature.py  crypto.py  enc0message.py  enccommon.py  encmessage.py  exceptions.py  headers.py  keyparams.py  mac0message.py  maccommon.py  macmessage.py  py.typed  recipient.py  recipients.py  sign1message.py  signcommon.py  signer.py  signmessage.py  utils.py  x509.py
tests/: __init__.py  conftest.py  test_attributes.py  test_cose_x509.py  test_coseattrs.py  test_coseheaders.py  test_cosekey.py  test_cosemessage.py  test_crypto.py  test_doctests.py  test_ec2_keys.py  test_enc0message.py  test_encmessage.py  test_keys.py  test_mac0message.py  test_macmessage.py  test_okp_keys.py  test_recipient.py  test_recipients.py  test_rsa_keys.py  test_sign1message.py  test_signmessage.py  test_symmetric_keys.py  test_x509.py  testutilities.py
(+144 files in other folders)
