[metadata]
name = pycose
version = 1.0.1
author = Timothy Claeys
author_email = timothy.claeys@gmail.com
description = CBOR Object Signing and Encryption (COSE) implementation
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
keywords = 'COSE', 'Internet of Things', 'CBOR', 'object security', 'EDHOC', 'OSCORE', 'cryptography'
license = BSD 3-Clause License
url = https://github.com/TimothyClaeys/pycose
project_urls =
    Documentation = https://pycose.readthedocs.io/en/latest/
    Source = https://github.com/TimothyClaeys/pycose
    Download = https://pypi.org/project/pycose/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Internet
    Topic :: Communications
    Topic :: Software Development
    Topic :: System :: Networking
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires= >=3.7
zip_safe = False
packages = find:
install_requires = file: requirements.txt

[options.extras_require]
develop = file: dev-requirements.txt

[options.packages.find]
include = pycose*
